--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
-  
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guilhermeAlexandrePereira/MyPortifolio.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
